--- a/src/main/resources/templates/presentantion/factura/createFactura.html
+++ b/src/main/resources/templates/presentantion/factura/createFactura.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head th:replace="fragments/head"><title>Facturas</title></head>
 <body>
+Header
 <header th:replace="fragments/header :: header">&nbsp;</header>
 
 <!-- Sección para buscar producto -->
@@ -31,7 +32,7 @@
 
 <!-- Sección para buscar cliente -->
 <div class="search-Cliente">
-    <p>Buscar Cliente Comprador</p>
+    <p>Buscar Cliente al cual agregarle producto</p>
     <form th:action="@{/presentantion/factura/searchCliente}" method="get">
         <label>
             <input type="number" name="id" placeholder="Introduce la cédula del cliente" required/>
