--- a/src/main/resources/templates/presentantion/productos/index.html
+++ b/src/main/resources/templates/presentantion/productos/index.html
@@ -9,7 +9,7 @@
 		<!----------------------------------------------------------------
 		 Body
 		---------------------------------------------------------------- -->
-		<div class="tabla-productos">
+		<div class="table">
 			<h1>[[#{producto.Title}]]</h1>
 			<div class="create">
 				<a class="boton-create" th:href="@{/presentantion/productos/create}">[[#{action.Create}]]</a>
@@ -29,16 +29,20 @@
 							<td th:text="${producto.code}"></td>
 							<td th:text="${producto.description}"></td>
 							<td th:text="${producto.price}"></td>
-							<td class="imagenes-select">
-								<a th:href="@{/presentantion/productos/view(id=${producto.id})}"><img class="imagen-view" src="/images/view.png" alt="ver"></a>
-								<a th:href="@{/presentantion/productos/edit(id=${producto.id})}"><img class="imagen-edit" src="/images/editar.png" alt="editar"></a>
-								<a th:href="@{/presentantion/productos/delete(id=${producto.id})}" th:onclick="return confirm([#{action.Confirm}])"><img class="imagen-delete" src="/images/delete.png" alt="borrar"></a>
+							<td>
+								<a th:href="@{/presentantion/productos/view(id=${producto.id})}"><img class="imagen-view" src="/images/view.png" alt="view"></a>
+								<a th:href="@{/presentantion/productos/edit(id=${producto.id})}"><img class="imagen-edit" src="/images/editar.png" alt="edit"></a>
+								<a th:href="@{/presentantion/productos/delete(id=${producto.id})}"
+									th:onclick="return confirm([[#{action.Confirm}]])"><img class="imagen-delete" src="/images/delete.png" alt=""></a>
 							</td>
 						</tr>
 					</tbody>
 				</table>
 			</div>
 		</div>
+		<!----------------------------------------------------------------
+		 Footer
+		---------------------------------------------------------------- -->
 		<footer th:replace="fragments/footer :: footer"></footer>
 	</body>
 </html>
