Creación de Facturas

--- a/src/main/resources/templates/presentantion/factura/index.html
+++ b/src/main/resources/templates/presentantion/factura/index.html
@@ -24,14 +24,14 @@
             </thead>
             <tbody>
             <tr th:each="factura : ${facturas}">
-                <td th:text="${factura.getCode()}"></td>
+                <td th:text="${factura.getId}"></td>
                 <td th:text="${factura.cedulaProveedor}"></td>
                 <td th:text="${factura.cedulaCliente}"></td>
                 <td th:text="${factura.tipoPago}"></td>
                 <td th:text="${factura.finalPrice}"></td>
                 <td>
-                    <a th:href="@{/presentantion/factura/view(id=${factura.getCode()})}"><img class="imagen-view" src="/images/view.png" alt="view"></a>
-                    <a th:href="@{/presentantion/clientes/delete(id=${factura.getCode()})}"
+                    <a th:href="@{/presentantion/factura/view(id=${factura.getId()})}"><img class="imagen-view" src="/images/view.png" alt="view"></a>
+                    <a th:href="@{/presentantion/clientes/delete(id=${factura.getId()})}"
                        th:onclick="'return confirm(\'' + #{action.Confirm} + '\')'"><img class="imagen-delete"	src="/images/delete.png" alt="delete"></a>
                 </td>
             </tr>
