--- a/src/main/resources/templates/presentantion/productos/index.html
+++ b/src/main/resources/templates/presentantion/productos/index.html
@@ -9,7 +9,7 @@
 		<!----------------------------------------------------------------
 		 Body
 		---------------------------------------------------------------- -->
-		<div class="table">
+		<div class="tabla-productos">
 			<h1>[[#{producto.Title}]]</h1>
 			<div class="create">
 				<a class="boton-create" th:href="@{/presentantion/productos/create}">[[#{action.Create}]]</a>
