--- a/src/main/resources/templates/presentantion/factura/index.html
+++ b/src/main/resources/templates/presentantion/factura/index.html
@@ -5,7 +5,7 @@
 
 <header th:replace="fragments/header :: header">&nbsp;</header>
 
-<div class="table">
+<div class="tabla-Factura">
     <h1>[[#{factura.Title}]]</h1>
     <div class="create">
         <a class="boton-create" th:href="@{/presentantion/factura/create}">[[#{action.Create}]]</a>
