--- a/src/main/resources/templates/presentantion/factura/listaFactura.html
+++ b/src/main/resources/templates/presentantion/factura/listaFactura.html
@@ -11,7 +11,7 @@
 		---------------------------------------------------------------- -->
 
 
-		<div class="table">
+		<div class="tabla">
 			<h1>[[#{factura.Title}]]</h1>
 			<div class="create">
 				<a class="boton-create" th:href="@{/presentantion/factura/create}">[[#{action.Create}]]</a>
