--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -7,7 +7,7 @@
 
 		<div>
 			<h1>[[#{main.Welcome}]]</h1>
-			<p th:text="${resultado}"></p>
+			<img src="/images/factura.png" alt="">
 		</div>
 
 		<footer th:replace="fragments/footer :: footer"></footer>
