--- a/src/main/resources/static/styles/css/style.css
+++ b/src/main/resources/static/styles/css/style.css
@@ -18,7 +18,7 @@ body {
     justify-content: center;
     text-align: center;
     align-items: center;
-    min-height: 100vh; /* Asegura que el cuerpo del documento tenga al menos la altura de la ventana del navegador */
+    min-height: 100vh;
 }
 
 header {
@@ -146,6 +146,43 @@ button {
     margin-right: 5rem;
     margin-left: 5rem;
 }
+.marco-producto{
+    display: inline-block;
+    border-radius: 1rem;
+    background-color: #A3B4C8;
+    justify-content: space-between;
+    text-align: left;
+    align-items: center;
+    padding: 2rem;
+    width: 40rem;
+    margin-top: 1rem;
+    margin-bottom: 10rem;
+    margin-right: 5rem;
+    margin-left: 5rem;
+}
+
+.marco-producto p {
+    font-weight: bold;
+}
+.marco-producto input {
+    width: 50%;
+    background-color: #f0f0f0;
+    border: 1px solid #888;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 5px;
+
+}
+.marco-producto option label {
+    background-color: #f0f0f0;
+    border: 1px solid #888;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 5px;
+    font-weight: bold;
+}
+.marco-producto img{
+}
 
 .marco input, .marco select, .marco-edit input, .marco-edit select{
     width: 50%;
@@ -154,7 +191,6 @@ button {
     padding: 10px;
     margin: 5px;
     border-radius: 5px;
-    font-family: "Rubik", sans-serif, Arial;
     flex: 1;
 
 }
@@ -165,14 +201,11 @@ button {
     padding: 10px;
     margin: 5px;
     border-radius: 5px;
-    font-family: "Rubik", sans-serif, Arial;
 }
 
-.marco label, .marco-edit label {
+.marco label, .marco p, .marco-edit label, .marco-edit p  {
     font-weight: bold;
 }
-
-
 
 .imagenes-select {
     display: flex;
@@ -193,9 +226,10 @@ button {
     transform: scale(1.1);
 }
 
+
 .boton-create {
     font-weight: bold;
-    background-color: #B74803;
+    background-color: var(--color2);
     color: white;
     padding: 0.50rem;
     border-radius: 0.5em;
@@ -206,4 +240,29 @@ button {
 .boton-create:hover {
     cursor: pointer;
 }
+
+.form-metodo-pago {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 1rem;
+    margin: 1rem;
+}
+
+input[type="submit"], input[type="date"], input[type="radio"] {
+    font-weight: bold;
+    background-color: var(--color2);
+    color: white;
+    padding: 0.50rem;
+    border-radius: 0.5em;
+    border: none;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+}
+
+input[type="submit"]:hover, input[type="date"]:hover, input[type="radio"]:hover {
+    cursor: pointer;
+}
+
 
